--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:theme="@style/Theme.KotlinCalculatorApp">
         <activity android:name=".MainActivity2" />
         <activity android:name=".Calculator" />
+        <activity android:name=".Animation" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
